--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,28 @@
+; PlatformIO Project Configuration File
+;
+;   Build options: build flags, source filter
+;   Upload options: custom upload port, speed and extra flags
+;   Library options: dependencies, extra library storages
+;   Advanced options: extra scripting
+;
+; Please visit documentation for the other options and examples
+; https://docs.platformio.org/page/projectconf.html
+
 [env:waveshare_esp32_s3_zero]
 platform = espressif32
 board = esp32-s3-devkitm-1
 framework = arduino
 board_upload.flash_size = 4MB
 board_build.partitions = default.csv
-baudrate = 115200
-monitor_speed = 115200
+monitor_speed = 921600
+build_flags = -DARDUINO_USB_CDC_ON_BOOT=1
 
-lib_deps = adafruit/Adafruit NeoPixel
+upload_speed = 921600
+
+lib_deps =
+	adafruit/Adafruit NeoPixel@^1.15.3
+	adafruit/Adafruit SSD1306@^2.5.7
+	karol-brejna-i/RemoteDebug@^4.0.1
+
+#upload_protocol = espota
+#upload_port = 192.168.0.244
