--- a/platformio.ini
+++ b/platformio.ini
@@ -24,5 +24,5 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.5.7
 	karol-brejna-i/RemoteDebug@^4.0.1
 
-#upload_protocol = espota
-#upload_port = 192.168.0.244
+upload_protocol = espota
+upload_port = 192.168.0.253
